# simbeta

analysis/plot/: PlotEfficiencies.C  PlotEnergy.C  threshold.C
simu/: ._vis.mac  CMakeLists.txt  DetectorConstruction.cc  DetectorConstruction.hh  EventAction.cc  EventAction.hh  PhysicsList.cc  PhysicsList.hh  PrimaryGenerator.cc  PrimaryGenerator.hh  RunAction.cc  SteppingAction.cc  simBeta.cc
simu/decays/: 85As.decay
